--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@cloudflare/ai": "^1.2.2",
-    "base64-js": "^1.5.1"
+    "base64-js": "^1.5.1",
+    "mustache": "^4.2.0"
   }
 }
